finish engine refactor